{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 34,
  "lineage": "9cdfee41-ebbf-5a5e-8318-e4d76a02d3df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "terra-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:631926633089:loadbalancer/terra-elb",
            "availability_zones": [
              "us-east-1f"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terra-elb-1875790024.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/index.html",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terra-elb",
            "idle_timeout": 100,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terra-elb",
            "security_groups": [
              "sg-0f603c3ae9a4e1435"
            ],
            "source_security_group": "631926633089/allow_tls",
            "source_security_group_id": "sg-0f603c3ae9a4e1435",
            "subnets": [
              "subnet-0bc403130a922cfca"
            ],
            "tags": {
              "Name": "terraform-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.webservers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631926633089:internet-gateway/igw-0aa4e426974c9ad8c",
            "id": "igw-0aa4e426974c9ad8c",
            "owner_id": "631926633089",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0e2599c02e7d23495"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a499d3b902ffc1e7",
            "owner_id": "631926633089",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa4e426974c9ad8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "vpc_id": "vpc-0e2599c02e7d23495"
          },
          "depends_on": [
            "aws_internet_gateway.terra_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0589f234a78f7de0f",
            "route_table_id": "rtb-0a499d3b902ffc1e7",
            "subnet_id": "subnet-0bc403130a922cfca"
          },
          "depends_on": [
            "aws_route_table.public_rt",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631926633089:security-group/sg-0f603c3ae9a4e1435",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f603c3ae9a4e1435",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "631926633089",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2599c02e7d23495"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631926633089:subnet/subnet-08f6a191cca0b8a53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-08f6a191cca0b8a53",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "631926633089",
            "tags": {
              "Name": "Private Subnet"
            },
            "vpc_id": "vpc-0e2599c02e7d23495"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631926633089:subnet/subnet-0bc403130a922cfca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.20.3.0/24",
            "id": "subnet-0bc403130a922cfca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631926633089",
            "tags": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-0e2599c02e7d23495"
          },
          "depends_on": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631926633089:vpc/vpc-0e2599c02e7d23495",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0fb7b13e2ba2b93c9",
            "default_route_table_id": "rtb-0fc415c864b16ada3",
            "default_security_group_id": "sg-0e3e2625470a788d2",
            "dhcp_options_id": "dopt-075ed9c74ad9343e5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e2599c02e7d23495",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fc415c864b16ada3",
            "owner_id": "631926633089",
            "tags": {
              "Name": "TerraVPC"
            }
          }
        }
      ]
    }
  ]
}